[package]
name = "tangy-mango"
version = "0.1.0"
edition = "2021"

[lib]
name = "tangy_mango"
path = "src/lib.rs"

[[bin]]
name = "tangy-mango"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
# Testing
tokio-test = "0.4"